fixed background on small device screens

--- a/redeeminggrounds/rgstyles.css
+++ b/redeeminggrounds/rgstyles.css
@@ -11,6 +11,22 @@ body{
     background-size: cover;
 }
 
+@media (max-width: 768px){
+    body{
+        background-image: url("images/tin-small.png") !important;
+        background-repeat: no-repeat;
+        background-attachment: fixed;
+        display: block;
+        left: 0;
+        top: 0;
+        -webkit-background-size: unset;
+        -moz-background-size: unset;
+        -o-background-size: unset;
+        background-size: 100% 100%;
+    }
+    
+}
+
 #top{
     z-index: 999999;
     position: fixed;
